--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,8 @@
-[tool.pyflow]
-name = "kysy"
-py_version = "3.9"
-version = "2021.10.20"
-authors = ["Stefan Hagen <stefan@hagen.link>"]
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
 
-[tool.pyflow.scripts]
-
-[tool.pyflow.dependencies]
-
-[tool.pyflow.dev-dependencies]
+[tool.black]
+line-length = 120
+skip-string-normalization = "True"
+target-version = ["py38", "py39", "py310"]
