--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,7 +46,7 @@ nav:
   - Usage: 'usage.md'
   - API: 'api.md'
   - Changes: 'changes.md'
-#  - Third-Party: 'third-party/README.md'
+  - Test Coverage: https://codes.dilettant.life/coverage/kysy/
 
 markdown_extensions:
   - mkautodoc
