Excluded tests from packaging

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,10 @@ install_requires =
     typer >= 0.6.1
 packages = find:
 
+[options.packages.find]
+exclude =
+    test*
+
 [options.entry_points]
 console_scripts =
     kysy = kysy.cli:app
