Simplified repository link text in docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ extra:
 
 copyright: Copyright &copy; 2022 Stefan Hagen under the MIT license
 
-repo_name: ~sthagen/kysy
+repo_name: sthagen/kysy
 repo_url: https://git.sr.ht/~sthagen/kysy
 edit_uri: ""
 
