Added third-party nav to mkdocs config

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
   - API: 'api.md'
   - Changes: 'changes.md'
   - Test Coverage: https://codes.dilettant.life/coverage/kysy/
+  - Third-Party: 'third-party/README.md'
 
 markdown_extensions:
   - abbr
